[gd_scene load_steps=10 format=3 uid="uid://26f3hx8n0hyk"]

[ext_resource type="Script" uid="uid://5kbvpjb0f2un" path="res://menu.gd" id="1_ouk20"]
[ext_resource type="Script" uid="uid://qfud4fy6wxee" path="res://singleplayer.gd" id="2_mae5d"]
[ext_resource type="FontFile" uid="uid://bm23rhih55byl" path="res://ArchitectsDaughter.ttf" id="2_ytr4m"]
[ext_resource type="Texture2D" uid="uid://gea87h46k6r2" path="res://mainMenu.jpg" id="3_mae5d"]
[ext_resource type="Script" uid="uid://bfa6w56emkkxk" path="res://background.gd" id="4_4hy44"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ytr4m"]
bg_color = Color(0.278431, 0.109804, 0.0509804, 0.752941)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2
shadow_offset = Vector2(2, -2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l48gv"]
bg_color = Color(0.278431, 0.109804, 0.0509804, 0.905882)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2
shadow_offset = Vector2(2, -2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ecwwl"]
bg_color = Color(0.278431, 0.109804, 0.0509804, 0.568627)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 5
shadow_offset = Vector2(2, -2)

[sub_resource type="Theme" id="Theme_l48gv"]
default_font = ExtResource("2_ytr4m")
Button/colors/font_color = Color(0, 0, 0, 0.682353)
Button/colors/font_disabled_color = Color(0, 0, 0, 0.682353)
Button/colors/font_focus_color = Color(1, 1, 1, 0.682353)
Button/colors/font_hover_color = Color(1, 1, 1, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(1, 0.984314, 0.960784, 1)
Button/colors/icon_focus_color = Color(1, 1, 1, 0)
Button/colors/icon_hover_color = Color(1, 1, 1, 0)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 0)
Button/colors/icon_normal_color = Color(1, 1, 1, 0)
Button/colors/icon_pressed_color = Color(1, 1, 1, 0)
Button/styles/focus = SubResource("StyleBoxFlat_ytr4m")
Button/styles/hover = SubResource("StyleBoxFlat_l48gv")
Button/styles/normal = SubResource("StyleBoxFlat_ecwwl")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ouk20")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -235.0
offset_right = 338.0
offset_bottom = -68.0
grow_vertical = 0
theme = SubResource("Theme_l48gv")

[node name="Singleplayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Multiplayer")
text = "Singleplayer"
script = ExtResource("2_mae5d")

[node name="Multiplayer" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Singleplayer")
focus_neighbor_bottom = NodePath("../Options")
text = "Multiplayer"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Multiplayer")
focus_neighbor_bottom = NodePath("../Exit")
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Singleplayer")
text = "Exit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -7

[node name="background" type="Sprite2D" parent="CanvasLayer"]
show_behind_parent = true
z_index = -100
position = Vector2(576, 324)
scale = Vector2(1.125, 0.632813)
texture = ExtResource("3_mae5d")
script = ExtResource("4_4hy44")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="VBoxContainer/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
